fixing styling on mobile devices

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -77,7 +77,7 @@
     }
     .button__portfolio-cta{
         margin-bottom: 0;
-        margin-top: 1rem;
+        /* margin-top: 1rem; */
         padding: 1rem 0 1rem 0;
         font-size: 1.3rem;
     }
